--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
+    "tiny-emitter": "^2.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -26,6 +28,7 @@
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "autoprefixer": "^10.4.14",
     "babel-jest": "^27.0.6",
     "cypress": "^9.7.0",
     "eslint": "^7.32.0",
@@ -34,7 +37,12 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "node-sass": "^8.0.0",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.2.4",
+    "sass-loader": "^13.2.2",
+    "tailwindcss": "^3.3.1"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
